# bsf-new-claude-design

./: .env.example  .gitignore  ARCHITECTURE.md  MIGRATION_PLAN.md  Makefile  README.md  SUPER-DUPER-ADMIN-FULL-DOCUMENTATION-EN.md  docker-compose.yml  start-local-db.ps1
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/app/: app.go
backend/internal/audit/: audit.go
backend/internal/betting/: betting.go
backend/internal/casino/: casino.go
backend/internal/catalog/: catalog.go
backend/internal/domains/: domains.go
backend/internal/engine/: engine.go  memory.go  remote.go
backend/internal/exposure/: exposure.go
backend/internal/fancy/: fancy.go
backend/internal/feed/: feed.go
backend/internal/helpers/: helpers.go
backend/internal/identity/: http.go  model.go  service.go  store.go
backend/pkg/auth/: auth.go
company_markdown/company/: COMPANY-FULL-DOCUMENTATION-EN.md  README.md  _TEMPLATE.md  aura-ggr.md  banners.md  bet-list-live.md  block-market.md  concurrent-users.md  dashboard.md  manage-password.md  results.md  set-fancy-betlimit.md
engine-rs/: Cargo.toml  Dockerfile  README.md
engine-rs/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
user-panel/: .env.example  .eslintrc.cjs  .gitignore  EVENT_MIGRATION.md  LAYOUT_MIGRATION.md  MIGRATION_REPORT.md  ROUTES.md  STYLE_MIGRATION.md  index.html  package-lock.json  package.json  vite.config.ts
user-panel/src/: App.test.tsx  App.tsx  main.tsx  setupTests.ts  vite-env.d.ts
(+294 files in other folders)
