[package]
name = "bsf-engine"
version = "0.1.0"
edition = "2021"
description = "BSF2020 matching engine — back/lay order matching + exposure, over HTTP."

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
